# gemicgi

./: .gitignore  README.md  gemicgi.py  pyproject.toml
