[tool.poetry]
name = "gemicgi"
version = "0.1.2"
description = "Very simple module for CGI scripts for gemini (especially Stargazer, but it has compatible CGI)"
authors = ["Mo Rijndael <hello@rijndael.cc>"]
license = "Unlicense"
readme = "README.md"
packages = [{include = "gemicgi.py"}]

[tool.poetry.dependencies]
python = "^3.8"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
